--- a/CinemaLite.Infrastructure/CinemaLite.Infrastructure.csproj
+++ b/CinemaLite.Infrastructure/CinemaLite.Infrastructure.csproj
@@ -1,17 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
-        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1"/>
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\CinemaLite.Application\CinemaLite.Application.csproj" />
+      <ProjectReference Include="..\CinemaLite.Domain\CinemaLite.Domain.csproj" />
     </ItemGroup>
 
 </Project>
