--- a/src/CinemaLite.Infrastructure/CinemaLite.Infrastructure.csproj
+++ b/src/CinemaLite.Infrastructure/CinemaLite.Infrastructure.csproj
@@ -11,4 +11,14 @@
       <ProjectReference Include="..\CinemaLite.Domain\CinemaLite.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.9" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
+    </ItemGroup>
+
 </Project>
