jwt_auth_implementation

--- a/src/CinemaLite.Application/CinemaLite.Application.csproj
+++ b/src/CinemaLite.Application/CinemaLite.Application.csproj
@@ -10,4 +10,19 @@
       <ProjectReference Include="..\CinemaLite.Domain\CinemaLite.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="CQRS\Auth\" />
+      <Folder Include="DTOs\Auth\" />
+      <Folder Include="Extensions\" />
+      <Folder Include="Services\Implementations\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="12.1.1" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+      <PackageReference Include="MediatR" Version="14.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.1" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
+    </ItemGroup>
+
 </Project>
