added_seat_booking_functional_and_configured_models_for_this_functional

--- a/src/CinemaLite.Api/appsettings.json
+++ b/src/CinemaLite.Api/appsettings.json
@@ -14,5 +14,8 @@
     "Issuer": "CinemaLiteAPI",
     "Audience": "CinemaLiteClient",
     "ExpireTimeInSeconds": 3600
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379"
   }
 }
