movies_redis_cache_implementation

--- a/src/CinemaLite.Api/appsettings.json
+++ b/src/CinemaLite.Api/appsettings.json
@@ -17,5 +17,10 @@
   },
   "Redis": {
     "ConnectionString": "localhost:6379"
+  },
+  "MessageBroker": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
