--- a/src/CinemaLite.Application/CinemaLite.Application.csproj
+++ b/src/CinemaLite.Application/CinemaLite.Application.csproj
@@ -19,8 +19,11 @@
       <PackageReference Include="FluentValidation" Version="12.1.1" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+      <PackageReference Include="MassTransit" Version="8.1.1" />
       <PackageReference Include="MediatR" Version="14.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="RedLock.net" Version="2.3.2" />
       <PackageReference Include="StackExchange.Redis" Version="2.10.1" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
