--- a/test/CinemaLite.IntegrationTest/CinemaLite.IntegrationTest.csproj
+++ b/test/CinemaLite.IntegrationTest/CinemaLite.IntegrationTest.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Shouldly" Version="4.3.0" />
         <PackageReference Include="Testcontainers" Version="4.10.0" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.10.0" />
+        <PackageReference Include="Testcontainers.RabbitMq" Version="4.10.0" />
         <PackageReference Include="Testcontainers.Redis" Version="4.10.0" />
         <PackageReference Include="xunit" Version="2.9.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
